2014-06-26  Rob Savoye  <rob.savoye@linaro.org>

	* aclocal.m4, Makefile.in, configure: Regenerated with automake
	1.14.1, autoconf 2.69.

2014-06-25  Maxim Kuvyrkov <maxim.kuvyrkov@linaro.org>

	* config/unix.exp: Add new proc make_absolute, and if shared_dir
	is in the board file, use that for executing the test.

2014-06-25  Rob Savoye  <rob.savoye@linaro.org>

	* runtest.exp: (lookfor-file): Fix bug were none of the releative
	paths were actually being used for file lookup.

2014-06-24  Rob Savoye  <rob.savoye@linaro.org>

	* config/aarch64-fv8.exp: Fix big-endian test. LE is 01, BE is 02.

2014-06-24  Rob Savoye  <rob.savoye@linaro.org>

	* config/aarch64-fv8.exp: New config file for using the ARM
	Foundation Model for aarch64.

	* Makefile.am: Install config/aarchfv8.exp.
	* Makefie.in: regenerated.

2014-05-03  Rob Savoye  <rob.savoye@linaro.org>

	* config/lava.exp ${board}_init: Parse the output file from LAVA
	for the SSH connection info we need (user@ip & hostname).

2014-05-02  Rob Savoye  <rob.savoye@linaro.org>

	* lib/remote.exp: Load lib/lava-too.exp on startup.

	* Makefile.am: Install lib/lava-tool.exp and config/lava.json.
	* Makefie.in: regenerated.

	* lib/lava-tool.exp (lava_json): Parse the input template and do
	substitutions of keywords to produce the proper JSON file.

	* config/lava.json: Add a template for the JSON file LAVA
	needs. This later has substitutions made based on the board file.

	* lib/lava-tool.exp: Add support for using lava-tool to control
	remote LAVA build slaves.

2014-02-17  Rob Savoye  <rob.savoye@linaro.org>

	* lib/rsh.exp: Fix typo, use $desthost instead of $hostname when
	retrieving the port number for SSH.

2013-11-28  Rob Savoye  <rob.savoye@linaro.org>

	* INSTALL, depcomp, install-sh, missing, mkinstalldirs: Updated
	utility files to Automake 1.13.3.

2013-11-25  Rob Savoye  <rob.savoye@linaro.org>

	* Makefile.am (baseboard_DATA): Remove the Linaro specific board
	files, they now live elsewhere.